# tinyRAG

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_CHECKLIST.md  TEST_REPORT.md  build_index.py  check.py  config.py  config.yaml  config.yaml.bak.20260422  demo_mcp_tools.py  exceptions.py  init_env.py  main.py  pyproject.toml  rag_cli.py  requirements.txt  ruff.toml  schema_v0.3.2.sql  schema_v0.3.2.txt  schema_v0.3.3.sql  test_search.py  tinyRAG_代码质量评估报告.docx  vacuum.py
chunker/: markdown_splitter.py
docs/: DEPLOYMENT.md  MCP_TOOLS_USAGE.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  jieba_dict_integration_report.md
embedder/: embed_engine.py  model_factory.py
mcp_server/: server.py  server.py.backup
plugins/: bootstrap.py
plugins/tinyrag_memory_graph/: config.py  entity_dicts.yaml  extractor.py  graph_builder.py  hooks.py  hybrid_retriever.py  memify.py  metrics.py  models.py  plugin.py  plugins_manager.py  schema_v0.3.4_plus_memory.sql  storage.py
prompts/: prompt_search_with_context.md  prompt_summarize_document.md
retriever/: hybrid_engine.py
scanner/: scan_engine.py
scripts/: graph_enhanced_search.py  merge_jieba_dict.py  migrate_remove_file_hash_unique.py  repair_entities_chunk_id.py  test_clean_entity.py  verify_plan_c.py  修复报告.md
storage/: cache.py  cache_corrected.py  database.py
tinyRAG.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
utils/: dedup.py  jieba_helper.py  logger.py
