[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyRAG"
version = "0.1.0"
description = "本地知识库检索增强系统，支持混合检索（向量 + 关键词）"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "fallleaf", email = "fallleaf.yx@gamil.com"}
]
keywords = ["rag", "retrieval", "vector-search", "knowledge-base", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0.1",
    "loguru>=0.7.2",
    "tqdm>=4.66.2",
    "fastembed>=0.4.0",
    "sqlite-vec>=0.1.6",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
rag-cli = "rag_cli:main"
rag-build = "build_index:main"
rag-server = "mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/fallleaf/tinyRAG"
Documentation = "https://github.com/fallleaf/tinyRAG/docs"
Repository = "https://github.com/fallleaf/tinyRAG.git"
Issues = "https://github.com/fallleaf/tinyRAG/issues"

[tool.setuptools]
packages = ["chunker", "embedder", "retriever", "scanner", "storage", "mcp_server", "utils"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003", "E501", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["scanner", "storage", "retriever", "chunker", "embedder", "mcp_server", "utils", "config"]
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
